--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dateString">Date</string>
+    <string name="start_time_string">Start Time</string>
+    <string name="event_title_string">Event Title</string>
+    <string name="edit_title_default_string">enter title</string>
+    <string name="eventTitleDefault">default event title</string>
 </resources>
